Support spaces and lowercase

--- a/NeonFox_Macro_Assembler/Makefile
+++ b/NeonFox_Macro_Assembler/Makefile
@@ -1,5 +1,5 @@
-CFLAGS=-std=c99 -pedantic -Wall -Wextra -Wconversion -D_XOPEN_SOURCE -march=native -O3
-LDLIBS=-lm
+CFLAGS=-std=c99 -pedantic -Wall -Wextra -Wconversion -D_XOPEN_SOURCE -march=native -O3 -flto
+LDLIBS=-lm -flto
 
 .PHONY: all
 
